@@ -1,3 +1,9 @@
+2005-04-04  H.J. Lu  <hongjiu.lu@intel.com>
+
+	* config/tc-ia64.c (start_unwind_section): Undo the change
+	of 2004-08-18.
+	(generate_unwind_image, dot_endp): Likewise.
+
 2005-04-01 David Mosberger  <davidm@hpl.hp.com>
 
 	* config/tc-ia64.c (ia64_handle_align): Move le_nop and
